# OLED-Care

./: Cargo.toml  LICENSE
src/: daemon.rs  ipc.rs  main.rs  tray.rs
src/monitor/: enumerate.rs  mod.rs  types.rs
src/overlay/: config.rs  manager.rs  mod.rs  window.rs
src/ui/: controller.rs  mod.rs  monitor_list.rs
src/ui/components/: checkbox.rs  mod.rs  slider.rs  switch.rs
