[package]
name = "OLED-Care"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.12"
gpui = "0.2.2"
raw-window-handle = "0.6"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_UI_Magnification"
] }
anyhow = "1.0"
