[package]
name = "OLED-Care"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.12"
gpui = "0.2.2"
raw-window-handle = "0.6"
windows = { version = "0.62.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_UI_Magnification",
  "Win32_Devices_Display",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_Controls",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading"
] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gpui-component = "0.5.1"

[build-dependencies]
winres = "0.1"
